src/test/testFiles/invalid/semanticErrors/arrayInvalidTypesInConstructorCheck.manimdsl
let x = new Array<number>(false);